adding more structure on how the game might work

--- a/index.html
+++ b/index.html
@@ -26,8 +26,17 @@
     <!-- link to my javascript page for the trivia app -->
     <script src="assets/javascript/app.js">
     </script>
+<button class="startBtn"></button>
+<div class="testContainer">
+    Questions
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. At incidunt autem nobis voluptatum, nemo consequuntur tempore totam ipsum ullam quod a atque obcaecati sequi fuga quis deserunt adipisci delectus doloremque.
 
+</div>
 
+<div class="results">
+
+    
+</div>
 
 
 
