adding html and css to build what the page may looklike

--- a/index.html
+++ b/index.html
@@ -26,10 +26,22 @@
     <!-- link to my javascript page for the trivia app -->
     <script src="assets/javascript/app.js">
     </script>
-<button class="startBtn"></button>
+
+    <header>
+        <h1 class="header">POP culture Trivia Game</h1>
+    </header>
+<button class="startBtn"> Push Me to start</button>
 <div class="testContainer">
-    Questions
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. At incidunt autem nobis voluptatum, nemo consequuntur tempore totam ipsum ullam quod a atque obcaecati sequi fuga quis deserunt adipisci delectus doloremque.
+<br>
+   <div class="row">
+    <div id="questDisplay" class="col-2">   </div>
+    <div class="col-3"> Questions
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. At incidunt autem nobis voluptatum, nemo consequuntur tempore totam ipsum ullam quod a atque obcaecati sequi fuga quis deserunt adipisci delectus doloremque.</div>
+    <div class="col-7"></div>
+
+
+   </div>
+
 
 </div>
 
