--- a/index.html
+++ b/index.html
@@ -24,39 +24,43 @@
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
     <!-- link to my javascript page for the trivia app -->
-    <script src="assets/javascript/app.js">
-    </script>
 
     <header>
         <h1 class="header">POP culture Trivia Game</h1>
+        <div class="headBtn">
+        <button class="startBtn btn-dark"> Push Me to start</button>
+    </div>
     </header>
-<button class="startBtn"> Push Me to start</button>
-<div class="testContainer">
-<br>
-   <div class="row">
-    <div id="questDisplay" class="col-2">   </div>
-    <div class="col-3"> Questions
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. At incidunt autem nobis voluptatum, nemo consequuntur tempore totam ipsum ullam quod a atque obcaecati sequi fuga quis deserunt adipisci delectus doloremque.</div>
-    <div class="col-7"></div>
+    <div class="testContainer">
+        <br>
+        <div class="row">
+            <div class="col-2"></div>
+            <div id="questDisplay" class="col-4"> </div>
+
+            <div class="col-6"></div>
 
 
-   </div>
+        </div>
 
 
-</div>
-
-<div class="results">
-
-    
-</div>
+    </div>
 
 
+    <div class="results">
 
 
+        
+    </div>
 
 
 
 
+
+
+
+
+    <script src="assets/javascript/app.js">
+    </script>
 
 </body>
 
