adding game check for ans, and fixed timer location and display

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="col-2"></div>
             <div id="questDisplay" class="col-4"> </div>
             <div class="col-3"></div>
-            <div id="timeClock" class="col-3"></div>
-
+            <div id="timeClock" class="col-1"></div>
+            <div  class="col-1"></div>
 
         </div>
 
