revised the code to correct / clear timer, revised code to select correct answer thanks marlee

--- a/index.html
+++ b/index.html
@@ -43,16 +43,13 @@
             <div  class="col-1"></div>
 
         </div>
-
+<div class="results">
+    </div>
 
     </div>
 
 <!-- This is where my results will be kept -->
-    <div class="results">
-
-
-        
-    </div>
+    
 
 
 
@@ -61,7 +58,7 @@
 
 <!-- link to my javascript page for the trivia app -->
 
-    <script src="assets/javascript/app.js">
+    <script src="assets/javascript/app2.js">
     </script>
 
 </body>
